// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link with href 1`] = `
<a
  className="flex items-center text-zinc-500 underline decoration-zinc-400 hover:text-zinc-900 hover:decoration-zinc-800 print:text-zinc-700"
  href="url/"
  target="_blank"
>
  link
</a>
`;

exports[`Link with href and custom target 1`] = `
<a
  className="flex items-center text-zinc-500 underline decoration-zinc-400 hover:text-zinc-900 hover:decoration-zinc-800 print:text-zinc-700"
  href="url/"
  target="_self"
>
  link
</a>
`;

exports[`Link with href, custom target and icon 1`] = `
<a
  className="flex items-center text-zinc-500 underline decoration-zinc-400 hover:text-zinc-900 hover:decoration-zinc-800 print:text-zinc-700"
  href="url/"
  target="_self"
>
  link
</a>
`;
